[package]
name = "newsletter"
version = "0.1.0"
authors = ["Michael Cuffaro <m@cuffaro.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"

[[bin]]
path = "src/main.rs"
name = "newsletter"
